# rag-lab

./: .gitignore  Makefile  pyproject.toml
data/embed/chapter_2/: embedded-docs-main.json
data/load/chapter_2/: doc-loader-main.json
data/prepare/chapter_2/: content.html  content.md  split-docs-main.json
data/tmp/chapter_2/: content_list_sample.json  doc-loader-main.json  docs.json  normal-docs-unstructured.json  normal-docs.json  split-docs-recursive.json  split-docs-unstructured-standard-deviation.json  split-docs-unstructured.json  split-docs.json
docs/retrival/: langchain.md
document_loader/Unstructured/: langchain.md  main.py  mainv1.py
document_loader/main/: main.py
embedding/: __init__.py  custom.py  run.py
embedding/main/: main.py
graph/archive/: main-v2.py
graph/main/: main.py
splitter/RecursiveCharacterTextSplitter/: main.py
splitter/main/: main.py
splitter/semantic_chunk/: main.py
technique/colpali/main/: bio10-single.descriptions.json  main.py
vector/main/: main.py
