[project]
name = "rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-unstructured>=1.0.1",
    "unstructured[pdf]>=0.22.21",
    "unstructured-client>=0.43.2",
    "python-magic>=0.4.27",
    "hazm>=0.12.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.32.0",
    "langchain-core>=1.3.0",
    "langchain-experimental>=0.4.1",
]
