[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embedding", "graph", "vector", "technique", "document_loader", "splitter"]

[project]
name = "rag-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-unstructured>=1.0.1",
    "unstructured[pdf]>=0.22.21",
    "unstructured-client>=0.43.2",
    "python-magic>=0.4.27",
    "hazm>=0.12.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.32.0",
    "langchain-core>=1.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.17.1",
    "colivara-py>=1.6.2",
    "pymupdf>=1.27.2.2",
    "pillow>=12.2.0",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.1.14",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
